# chatty-log-archiver

./: .gitignore  Cargo.toml  README.md
migrations/00000000000100_create_channels/: up.sql
migrations/00000000000200_create_users/: up.sql
migrations/00000000000300_create_messages/: down.sql  up.sql
src/: bin.rs  collector.rs  errors.rs  lib.rs  models.rs  parser.rs  schema.rs
src/collector/: mod.rs  pg.rs
src/models/: mod.rs  types.rs
tests/: collector.rs
